# MSS

./: .gitignore  .gitmodules  README.md  package-lock.json
Arduino/: README.md  thruster_and_speed.ino
Doc/: BATTERY_VOLTAGE.md  CameraDocsLink.md  NaviLiDARDocLinks.md  PTP_Network_Guide.md  Rosbag.md  SBG_IMU_DATA_TOPIC_ISSUE.md  SPEED_DATA.md  TunnelModel.md  VNC_SETUP_GUIDE.md  battery.md  camera_logging.md  mola.md  navi_lidar_logging.md
Doc/time/: phc2sys_set.txt  ptp_phc2sys_solution.txt  ptp_sync_verification.txt  time_bootstrap_summary.txt  time_management_services.txt  time_source_summary.txt
config/: README.md  install_ros2_diagnostic_service.sh  install_vnc_service.sh  ros2-diagnostic.service  sensor_proxy  sensor_proxy_with_auth.sh  tm-proxy.service  vncserver@.service
config/battery/: battery.yaml
config/camera/: auto.yaml  camera_calibration.yaml  ros1.yaml  ros2.yaml
config/imu/: sbg.yaml  sbg_ros1.yaml  sbg_ros2.yaml
config/logging/: local.yaml.example  logging.yaml
config/navi_lidar/: qt128.yaml
config/ptp/: phc2sys-client.service  ptp4l-client.service  ptp4l-master.service  ptp_client.conf  ptp_master.conf  zda_publisher.yaml
config/rosbag/: all_sensors.yaml  rosbag_ros2.yaml
config/thruster/: thruster_wifi.yaml
ros1_ws/: README.md
ros1_ws/src/ros1_bringup/: CMakeLists.txt  README.md  package.xml
ros1_ws/src/ros1_bringup/launch/: all_sensors.launch  camera.launch  imu.launch  navi_lidar.launch
ros2_diagnostic/: CHANGELOG.md  README.md  alerts.py  config.py  config.yaml  event_log.py  main.py  requirements.txt  run_with_ros2_env.sh  start.sh  tm_proxy.py
ros2_diagnostic/diagnostics/: __init__.py  base.py  camera_log_parser.py  lidar_log_parser.py  mqtt_client.py  ros2_control.py  ros2_helper.py  ros2_monitor.py  rosbag_controller.py  utils.py
ros2_diagnostic/diagnostics/sensor_monitor/: __init__.py  battery.py  camera.py  imu.py  navi_lidar.py  pi5_sensors.py  thruster.py  uli_lidar.py
ros2_diagnostic/static/css/: base.css  events.css  main.css
ros2_diagnostic/static/js/: alerts.js  dashboard.js  events.js  logs.js  main.js  sensor-config.js  sensors.js  tools.js
ros2_diagnostic/templates/: base.html  events.html  index.html  logs.html  sensors.html  tools.html
ros2_diagnostic/tests/: __init__.py  conftest.py  pytest.ini  requirements-test.txt  verify_sensor_fields.py
ros2_diagnostic/tests/api/: test_alerts_api.py  test_rosbag_api.py  test_rosbag_controller.py  test_websocket.py
ros2_diagnostic/tests/integration/: test_alert_flow.py  test_rosbag_e2e.py  test_websocket_e2e.py
ros2_diagnostic/tests/manual/: mock_pi5_mqtt.py  test_alert_mock.py
ros2_diagnostic/tests/ui/: conftest.py  test_pi5_sensors_page.py  test_rosbag_ui.py  test_websocket_connection.py
ros2_diagnostic/tests/ui/pages/: __init__.py  base_page.py  dashboard_page.py  sensors_page.py  websocket_page.py
ros2_diagnostic/tests/unit/: test_alerts.py  test_log_rotation.py  test_navi_lidar_alerts.py  test_pi5_sensors.py  test_ros2_control_config.py  test_sensor_status_fields.py
ros2_ws/: README.md
ros2_ws/src/battery_monitor/: CMakeLists.txt  package.xml
ros2_ws/src/battery_monitor/battery_monitor/: battery_monitor_node.py
ros2_ws/src/battery_monitor/launch/: battery_monitor.launch.py
ros2_ws/src/battery_monitor/msg/: BatteryVoltage.msg
ros2_ws/src/ptp_time_publisher/: package.xml  setup.cfg  setup.py
ros2_ws/src/ptp_time_publisher/config/: zda_publisher.yaml
ros2_ws/src/ptp_time_publisher/ptp_time_publisher/: zda_publisher_node.py
ros2_ws/src/ros2_bringup/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/ros2_bringup/config/: camera.yaml  compressor.yaml  qt128.yaml  recorder.yaml  rosbag.yaml  thruster.yaml  thruster_wifi.yaml  zda_publisher.yaml
ros2_ws/src/ros2_bringup/launch/: all.launch.py  battery.launch.py  camera.launch.py  compressor.launch.py  imu.launch.py  navi_lidar.launch.py  ptp.launch.py  recorder.launch.py  thruster.launch.py
ros2_ws/src/ros2_bringup/ros2_bringup/: __init__.py
ros2_ws/src/thruster_control/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/thruster_control/msg/: ConnectionStatus.msg  SpeedData.msg  TempHumidity.msg  ThrusterCmdPWM.msg  ThrusterMetrics.msg  ThrusterStatusPWM.msg  UpsStatus.msg  WaterQuality.msg
ros2_ws/src/thruster_control/resource/: thruster_control
ros2_ws/src/thruster_control/src/: thruster_node.cpp  thruster_wifi_node.cpp
scripts/: README.md  add_submodule.sh  calib.py  install_time_bootstrap_service.sh  ptp_network.sh  ptp_status.sh  ptp_sync_verify.sh  run_all_sensors.sh  run_all_sensors_record.sh  run_camera.sh  run_imu.sh  run_lidar.sh  send_zda_pin8.py  setup_sensor_proxy.sh  simple_ads1115_test.py  start_tigervnc.sh  time_bootstrap.sh  update_submodules.sh
scripts/ros1/: run_all_sensors.sh  run_all_sensors_no_record.sh  run_camera.sh  run_imu.sh  run_lidar.sh
scripts/ros2/: run_ros2_all.sh  run_ros2_all_no_record.sh  run_ros2_all_record.sh  run_ros2_battery_monitor.sh  run_ros2_camera.sh  run_ros2_imu.sh  run_ros2_in_docker_humble.sh  run_ros2_navi_lidar.sh  run_ros2_thruster.sh
scripts/ros2/lib/: load_logging_config.py  logging.sh
