<?xml version="1.0"?>
<package format="3">
  <name>thruster_control</name>
  <version>0.0.0</version>
  <description>ROS2 package to control and read status from an Arduino thruster controller over serial.</description>
  <maintainer email="jw51@tu-clausthal.de">jiale wang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>libpaho-mqtt-dev</depend>
  <depend>libpaho-mqttpp-dev</depend>
  <depend>nlohmann-json3-dev</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
